--- a/less/forms.less
+++ b/less/forms.less
@@ -304,6 +304,9 @@ form.hform dd {
 	width: 70%;
 }
 
+.hform form .radiogroup li:first-child,
+form.hform .radiogroup li:first-child { padding-top: 0; }
+
 // Submit button list layout
 form #submit-list {
 	clear: both;
